--- a/webapp/templates/login.html
+++ b/webapp/templates/login.html
@@ -27,6 +27,11 @@
         <div class="login-logo">
             <a href="{{url_for('index')}}"><b>Demo</b>Project</a>
         </div>
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning alert-dismissible">
+            <i class="icon fas fa-exclamation-triangle"></i><button type="button" class="close" data-dismiss="alert">&times;</button> {{ message }}
+        </div>
+        {% endfor %}
         <!-- /.login-logo -->
         <div class="card">
             <div class="card-body login-card-body">
