--- a/webapp/templates/register.html
+++ b/webapp/templates/register.html
@@ -27,7 +27,11 @@
         <div class="register-logo">
             <a href="{{url_for('index')}}"><b>Demo</b>Project</a>
         </div>
-
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning alert-dismissible">
+            <i class="icon fas fa-exclamation-triangle"></i><button type="button" class="close" data-dismiss="alert">&times;</button> {{ message }}
+        </div>
+        {% endfor %}
         <div class="card">
             <div class="card-body register-card-body">
                 <p class="login-box-msg">Register a new membership</p>
