Add login required, update big event

--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -199,6 +199,9 @@
                 <p>Big Event Records</p>
                 <h5>10/11/2019</h5>
                 <li>Project start</li>
+                <hr>
+                <h5>11/1/2019</h5>
+                <li>Use docker as webservice host</li>
             </div>
         </aside>
         <!-- /.control-sidebar -->
