--- a/webapp/templates/echarts_demo.html
+++ b/webapp/templates/echarts_demo.html
@@ -7,7 +7,7 @@
                 <h3 class="card-title">Pie</h3>
             </div>
             <!-- /.card-header -->
-            <div id="pieContainer" class="card-body">
+            <div class="card-body">
                 <div id="pie" style="width:100%;height:400px;"></div>
             </div>
             <!-- /.card-body -->
@@ -54,60 +54,10 @@
 <!-- ECharts -->
 <!-- Required Scripts -->
 <script src="../static/plugins/echarts/echarts.min.js"></script>
+<!-- For ECharts custom style -->
 <script src="../static/plugins/echarts/macarons.js"></script>
 
 <!-- Custom Scripts -->
-<script>
-    var myChart = document.getElementById('pie');
-    var myChart = echarts.init(myChart, 'macarons');
+<script src="../static/js/echarts_demo.js"></script>
 
-    var option = {
-        tooltip: {
-            trigger: 'item',
-            formatter: "{a} <br/>{b}: {c} ({d}%)"
-        },
-        legend: {
-            orient: 'vertical',
-            x: 'left',
-            data: ['直接访问', '邮件营销', '联盟广告', '视频广告', '搜索引擎']
-        },
-        series: [
-            {
-                name: '访问来源',
-                type: 'pie',
-                radius: ['50%', '70%'],
-                avoidLabelOverlap: false,
-                label: {
-                    normal: {
-                        show: false,
-                        position: 'center'
-                    },
-                    emphasis: {
-                        show: true,
-                        textStyle: {
-                            fontSize: '30',
-                            fontWeight: 'bold'
-                        }
-                    }
-                },
-                labelLine: {
-                    normal: {
-                        show: false
-                    }
-                },
-                data: [
-                    { value: 335, name: '直接访问' },
-                    { value: 310, name: '邮件营销' },
-                    { value: 234, name: '联盟广告' },
-                    { value: 135, name: '视频广告' },
-                    { value: 1548, name: '搜索引擎' }
-                ]
-            }
-        ]
-    };
-    myChart.setOption(option);
-    window.addEventListener("resize", function () {
-        myChart.resize();
-    });
-</script>
 {% endblock contentbody %}
