Add video log sidebar feature

--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -135,6 +135,12 @@
                                         <p>ECharts</p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="{{url_for('videodemo')}}" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Video</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item has-treeview menu-close">
@@ -207,6 +213,9 @@
                 <hr>
                 <h5>11/18/2019</h5>
                 <li>Hold jenkins server in docker for use api</li>
+                <hr>
+                <h5>11/27/2019</h5>
+                <li>Add video log demo</li>
             </div>
         </aside>
         <!-- /.control-sidebar -->
